--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ project(":core") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         compile "com.badlogicgames.ashley:ashley:$ashleyVersion"
+
+        compile group: 'com.google.guava', name: 'guava', version: '15.0'
     }
 }
 
